# drf-activities

./: README.md  pyproject.toml
activities/: asgi.py  settings.py  urls.py  wsgi.py
activities/activity/: models.py  serializers.py  urls.py  views.py
activities/activity/migrations/: 0001_initial.py  0002_auto_20210211_1832.py
